refactored keycloak, group and contact repository